--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -16,7 +16,10 @@
         "GUID:de4e6084e6d474788bb8c799d6b461eb",
         "GUID:c82d6f32a4ef87b4d8488b6b8c880713",
         "GUID:d8b63aba1907145bea998dd612889d6b",
-        "GUID:8d9e84799a3968d4ba38c55892d14093"
+        "GUID:8d9e84799a3968d4ba38c55892d14093",
+        "GUID:30817c1a0e6d646d99c048fc403f5979",
+        "GUID:627104647b9c04b4ebb8978a92ecac63",
+        "GUID:6806a62c384838046a3c66c44f06d75f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
