--- a/Assets/Launcher/Unity.Model.asmdef
+++ b/Assets/Launcher/Unity.Model.asmdef
@@ -10,7 +10,8 @@
         "GUID:02c11f442ffc148a9b44d2aa0618ec34",
         "GUID:efa45043feb7e4147a305b73b5cea642",
         "GUID:f4059aaf6c60a4a58a177a2609feb769",
-        "GUID:de4e6084e6d474788bb8c799d6b461eb"
+        "GUID:de4e6084e6d474788bb8c799d6b461eb",
+        "GUID:30817c1a0e6d646d99c048fc403f5979"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
