--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -19,7 +19,8 @@
         "GUID:8d9e84799a3968d4ba38c55892d14093",
         "GUID:30817c1a0e6d646d99c048fc403f5979",
         "GUID:627104647b9c04b4ebb8978a92ecac63",
-        "GUID:6806a62c384838046a3c66c44f06d75f"
+        "GUID:6806a62c384838046a3c66c44f06d75f",
+        "GUID:bd78bb22ae3a60443a865fb2d7dfdafa"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
