--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -18,6 +18,7 @@
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:8d9e84799a3968d4ba38c55892d14093",
         "GUID:7c88a4a7926ee5145ad2dfa06f454c67",
+        "GUID:6df57947d5e3f384281448f719f9efa3",
         "GUID:30817c1a0e6d646d99c048fc403f5979",
         "GUID:627104647b9c04b4ebb8978a92ecac63",
         "GUID:6806a62c384838046a3c66c44f06d75f",
