--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -2,6 +2,7 @@
     "name": "Unity.Hotfix",
     "rootNamespace": "",
     "references": [
+        "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:89fdb54e773827b40b9127329bdaed75",
         "GUID:0d1ae7fff56963548a2a2a16dab3c5c6",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
