--- a/Assets/Res/Guide/ForceGuideTriggerConfigList.json
+++ b/Assets/Res/Guide/ForceGuideTriggerConfigList.json
@@ -1,4 +1,10 @@
 {
   "triggerList": [
+    {
+      "guideId": 1,
+      "guideTriggerName": "TestTrigger",
+      "args": [
+      ]
+    }
   ]
 }
