--- a/Assets/Res/Guide/ForceGuideTriggerConfigList.json
+++ b/Assets/Res/Guide/ForceGuideTriggerConfigList.json
@@ -2,7 +2,7 @@
   "triggerList": [
     {
       "guideId": 1,
-      "guideTriggerName": "TestTrigger",
+      "guideTriggerName": "LccHotfix.TestTrigger",
       "args": [
       ]
     }
